2009-11-03  Jason Merrill  <jason@redhat.com>

	PR c++/41876
	* parser.c (cp_parser_exception_declaration): Pass true to
	is_condition parm of cp_parser_type_specifier_seq.

2009-11-03  Dodji Seketeli  <dodji@redhat.com>

	PR c++/37093
	* pt.c (check_valid_ptrmem_cst_expr): New function.
	(convert_nontype_argument): Use it to output an error for
	illegal pointer to member expressions used as template arguments.

2009-08-04  Dodji Seketeli  <dodji@redhat.com>

	PR debug/39706
	* error.c (lang_decl_name): Print qualified names for decls
	in  namespace scope.

2009-08-04  Release Manager

	* GCC 4.3.4 released.

2009-07-10  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-09  John F. Carr  <jfc@mit.edu>

	PR c++/37877
	* parser.c (cp_parser_class_specifier): Clear
	parser->in_unbraced_linkage_specification_p while parsing class
	specifiers.

2009-07-10  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-11-17  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36089
	* init.c (constant_value_1): Handle TREE_LIST init.

2009-06-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/32041
	* parser.c (cp_parser_builtin_offsetof): Allow `->' in
	offsetof member-designator, handle it as `[0].'.

2009-06-08  Jakub Jelinek  <jakub@redhat.com>

	PR c++/40373
	* call.c (check_dtor_name): Return false even if
	get_type_value (name) is error_mark_node.

2009-06-04  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-03-09  Jakub Jelinek  <jakub@redhat.com>

	PR c++/39371
	* semantics.c (finish_switch_cond): Don't call get_unwidened.
	* decl.c (finish_case_label): Pass SWITCH_STMT_TYPE as 3rd argument
	instead of TREE_TYPE (cond).

2009-04-23  Dodji Seketeli  <dodji@redhat.com>

	PR c++/38228
	* pt.c (unify): Do not allow the result of a template argument
	deduction to be a METHOD_TYPE.
	* cvt.c (cp_convert): Report a meaningful error for non-valid use