@@ -1,3 +1,9 @@
+2009-11-04  Dodji Seketeli  <dodji@redhat.com>
+
+	Revert fix for PR c++/37093
+	* g++.dg/other/ptrmem10.C: Revert.
+	* g++.dg/other/ptrmem11.C: Likewise.
+
 2009-10-28  Jason Merrill  <jason@redhat.com>
 
 	PR c++/41876
